# Capstone_ros2

./: README.md  cyclonedds.xml
src/my_robot_controller/: CMakeLists.txt  package.xml
src/my_robot_controller/config/: slam_params.yaml
src/my_robot_controller/include/my_robot_controller/LAPTOP_TO_PI/: brain.hpp  motor.hpp
src/my_robot_controller/include/my_robot_controller/PI_TO_LAPTOP/: imu.hpp  laser_scan.hpp  odom.hpp
src/my_robot_controller/launch/: nav2_launch.py  rplidar_c1_launch.py  slam_launch.py
src/my_robot_controller/src/LAPTOP_TO_PI/: brain.cpp  motor.cpp
src/my_robot_controller/src/PI_TO_LAPTOP/: imu.cpp  laser_scan.cpp  odom.cpp
src/my_robot_controller/src/practice/: practice.cpp
